refactor cls